<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">androidProject</string>

    <string name="medical_disclaimer">
        [면책 조항] 본 앱이 제공하는 재활 정보는 참고용이며, 전문적인 의학적 진단이나 치료를 대체할 수 없습니다.\n
        통증이 심하거나 지속될 경우 반드시 의사와 상담하십시오.
    </string>

    <string name="title_home">홈</string>
    <string name="title_history">기록</string>
    <string name="title_profile">개인정보</string>

    <string name="history_title">운동 및 식단 기록</string>
    <string name="history_empty_state">선택한 날짜에 기록이 없습니다.</string>
    <string name="history_ai_analysis_title">주간 AI 분석 리포트</string>

    <string name="profile_empty_message">환자 정보를 입력해 주세요.</string>
    <string name="profile_empty_button">환자 정보 입력하기</string>

    <string name="home_empty_message">AI가 추천을 생성하려면\n개인정보가 필요합니다.</string>
    <string name="home_empty_button_go_to_profile">개인정보 입력하기</string>
    <string name="home_no_exercises_today">오늘은 추천된 운동이 없습니다.\n내일의 루틴을 확인해주세요.</string>

    <string name="login_username_hint">아이디</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_button_text">로그인</string>
    <string name="login_failed_message">아이디 또는 비밀번호를 다시 확인하세요.</string>
    <string name="login_signup_button_text">회원가입</string>

    <string name="signup_title">회원가입</string>
    <string name="signup_password_confirm_hint">비밀번호 확인</string>
    <string name="signup_button_text">회원가입</string>
    <string name="signup_error_user_exists">이미 사용 중인 아이디입니다.</string>
    <string name="signup_error_short_password">비밀번호는 6자리 이상 입력해주세요.</string>
    <string name="signup_error_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_error_unknown">알 수 없는 오류로 회원가입에 실패했습니다.</string>

    <string name="default_web_client_id">1053114952156-YOUR_WEB_CLIENT_ID_GOES_HERE.apps.googleusercontent.com</string>

    <string-array name="meal_types">
        <item>아침</item>
        <item>점심</item>
        <item>저녁</item>
        <item>간식</item>
    </string-array>

</resources>