<?xml version="1.0" encoding="utf-8"?>
<!--
  [파일 2/5]
  '하단 툴바'의 [기록], [홈], [개인정보] 버튼을 정의합니다.
  (★핵심★: 이 ID가 '지도'의 ID와 일치해야 합니다)
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_history" /> <!-- (수정) @string/title_history 사용 -->

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_home" /> <!-- (수정) @string/title_home 사용 -->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_profile" /> <!-- (수정) @string/title_profile 사용 -->

</menu>